...
                }
            )
            .trackButtonTap("Minimize Player")
            
            makeTabButton(
                isSelected: playerCoordinator.selectedTab == .bookInfo,
                image: playerViewModel.isPlaying ? "pause.fill" : "play.fill",
                size: 28,
                action: {
                    playerViewModel.playPause()
                }
            )
            .trackButtonTap("Play pause")
...
