...
  Copyright (c) 2025 Visibl Holdings Limited
*/

// MARK: - Tabbar

"library_tab" = "My Library";
"store_tab" = "Book Store";
"settings_tab" = "Settings";

// Each Screen Title

"library_screen_title" = "Library";
"store_screen_title" = "Store";
...

"released_title" = "Released";
"duration_title" = "Duration";
"chapters_title" = "Chapters";
"book_summary_title" = "Summary";
"report_a_problem_btn" = "Report a Problem";
"get_this_book_btn" = "Get This Book";
"download_book_btn" = "Download Book";
"already_added_btn" = "Already Added";

"catalogue_aax_placeholder_title" = "Synchronizing";
"catalogue_aax_placeholder_subtitle" = "Please wait while your library is being synchronized. You'll be notified when it's complete.";
"catalogue_aax_connect_title" = "Import Books";
...
